# cpp-projects

algorithms_lib/: .gitignore  CMakeLists.txt  main.cpp
algorithms_lib/Algorithms/: Algorithms.h  xrange.h  zip.h
algorithms_lib/Algorithms/AdditionalClasses/: XRangeClass.h  ZipClass.h
algorithms_lib/Google_tests/: AlgorithmsTests.cpp  CMakeLists.txt
allocator/: CMakeLists.txt  main.cpp
allocator/Google_Tests/: AllocatorTests.cpp  CMakeLists.txt
allocator/allocator/: Allocator.h
archivator/: CMakeLists.txt
archivator/lib/: HammingCode.cpp  HammingCode.h  Parser.cpp  Parser.h  archivator.cpp  archivator.h
circular_buffer/: .gitignore  CMakeLists.txt  main.cpp
circular_buffer/CCircularBuffer/: CCircularBuffer.h
circular_buffer/CCircularBufferExt/: CCircularBufferExt.h
circular_buffer/Google_tests/: CMakeLists.txt  CircularBufferExtTests.cpp  CircularBufferTests.cpp
commandline_parser/: .gitignore
commandline_parser/lib/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  FlagArguments.cpp  FlagArguments.h  HelpArguments.cpp  HelpArguments.h  IntArguments.cpp  StringArguments.cpp  StringArguments.h
commandline_parser/tests/: argparser_test.cpp
mp3_parser/: CMakeLists.txt
mp3_parser/lib/: BasicFrame.cpp  BasicFrame.h  FileParser.cpp  FileParser.h  GeneralFunctions.cpp  GeneralFunctions.h  HeaderParse.cpp  HeaderParse.h
mp3_parser/lib/COMM/: COMM.cpp  COMM.h
mp3_parser/lib/COMR/: COMR.cpp  COMR.h
mp3_parser/lib/ENCR/: ENCR.cpp  ENCR.h
mp3_parser/lib/ETCO/: ETCO.cpp  ETCO.h
mp3_parser/lib/FrameOfURL/: URLFrames.cpp  URLFrames.h
mp3_parser/lib/GRID/: GRID.cpp  GRID.h
mp3_parser/lib/LINK/: LINK.cpp  LINK.h
mp3_parser/lib/OWNE/: OWNE.cpp  OWNE.h
mp3_parser/lib/PCNT/: PCNT.cpp  PCNT.h
mp3_parser/lib/POPM/: POPM.cpp  POPM.h
mp3_parser/lib/POSS/: POSS.cpp  POSS.h
mp3_parser/lib/PRIV/: PRIV.cpp  PRIV.h
mp3_parser/lib/RBUF/: RBUF.cpp  RBUF.h
mp3_parser/lib/SEEK/: SEEK.cpp  SEEK.h
mp3_parser/lib/SYLT/: SYLT.cpp  SYLT.h
mp3_parser/lib/TextFrame/: TextFrame.cpp  TextFrame.h
mp3_parser/lib/UFID/: UFID.cpp  UFID.h
mp3_parser/lib/USER/: USER.cpp  USER.h
mp3_parser/lib/USLT/: USLT.cpp  USLT.h
omfl_parser/: .gitignore
omfl_parser/lib/: CMakeLists.txt  check_on_valid.cpp  check_on_valid.h  parser.cpp  parser.h  sections_and_values.cpp  sections_and_values.h
omfl_parser/lib/parser_from_5_laba/: IntArguments.h
omfl_parser/tests/: test_format.cpp
sandpile/: CMakeLists.txt
sandpile/lib/: CMakeLists.txt  parser.cpp  parser.h  sandpile.cpp  sandpile.h
uint_2022/lib/: number.cpp  number.h
weather_forecast/: .gitignore  CMakeLists.txt  main.cpp
weather_forecast/Metcast/: CityInformation.cpp  CityInformation.h  Metcast.cpp  Metcast.h
word_counts/: main.cpp
