add_library(ITMLparse parser.cpp
        parser.h
        check_on_valid.cpp
        check_on_valid.h
        sections_and_values.cpp
        sections_and_values.h
        parser_from_5_laba/ArgParser.cpp
        parser_from_5_laba/ArgParser.h
        parser_from_5_laba/FlagArguments.cpp
        parser_from_5_laba/FlagArguments.h
        parser_from_5_laba/HelpArguments.cpp
        parser_from_5_laba/HelpArguments.h
        parser_from_5_laba/IntArguments.cpp
        parser_from_5_laba/IntArguments.h
        parser_from_5_laba/StringArguments.cpp
        parser_from_5_laba/StringArguments.h)